Refactor: 공연 검색 로직 최적화 (#142)
* Refactor: Querydsl Tuple 조회를 통한 DTO-엔티티 의존성 분리

* Chore: 사용하지 않는 import문 제거

* Refactor: PerformanceResponse에 QueryProjection 적용

* Refactor: QueryDSL Projection을 Projections.constructor에서 @QueryProjection 방식으로 변경

* Chore: 사용되지 않는 import문 제거